advait-chatbot/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot
  namespace: rehs-2026-chatbot

spec:
  selector:
    app: chatbot

  ports:
  - port: 80
    targetPort: 8501

  type: ClusterIP
